# open-sensor-platform

./: .gitignore  README.md  index.html  params.json
algorithm/osp/: Makefile  OSP_interface.c  SecondOrderLPF.c  ecompass.c  ecompass.h  fp_atan2.c  fp_sensor.h  fp_sqrt.c  fp_trig.c  fpsup.c  fpsup.h  gravity_lin.c  gravity_lin.h  lpf.h  osp.c  osp.h  rotvec.c  rotvec.h  rotvec_precise.c  sigmot.c  sigmot.h  step.c  step.h  tilt.c  tilt.h  trig_sin.c
algorithm/osp/MDK-ARM/: osp_algs.uvoptx  osp_algs.uvprojx
algorithm/osp/lib/: osp_algs_CM3.lib
docs/: Doxyfile.in  osp-algorithm-api-docs.h  osp-api-docs.h  osp-footer.html
embedded/Common/ASF/: ASF_Messages.c  ASF_MsgDef.h  ASF_MsgStruct.h  ASF_TDefMacros.h  ASF_TQEnum.h  ASF_TaskDefType.h  ASF_TaskInit.c  ASF_TaskStruct.h  ASF_Tasks.h  ASF_Timers.c  asf_types.h
embedded/Common/Alg/: OSP_EmbeddedAlgCalls.c  StepDetector.c  StepDetector.h  StepSegmenter.c  StepSegmenter.h  StepSignalGenerator.c  StepSignalGenerator.h
embedded/Common/Algorithms/: OSP_AlgorithmsApi.h
embedded/Common/App/: Alg_Conversion.c  Alg_Conversion.h  Algorithm_T.c  App_MsgDef.h  CmdHandler_T.c  Common.h  DebugPrint.c  FM_DataTypes.h  FixedPointTypes.h  InstrMgr_T.c  InstrMgr_User.c  OspVersion.h  SensorAcq_T.c  Types.h  hw_setup.h  osp-api.c
embedded/Common/Modules/Bus-drivers/: I2C_Driver.h
embedded/Common/Modules/Bus-drivers/STM32F1-CM3/: I2C_Driver.c
embedded/Common/Modules/Bus-drivers/STM32L1-CM3/: I2C_Driver.c
embedded/Common/Modules/Sensor-Drivers/: Acc_BMC150_I2C.c  Acc_BMC150_I2C.h  Acc_Common.h  Acc_LSM303DLHC_I2C.c  Acc_LSM303DLHC_I2C.h  Gyro_BMG160_I2C.c  Gyro_Common.h  Gyro_L3GD20_I2C.c  Gyro_L3GD20_I2C.h  Mag_BMC150_I2C.c  Mag_Common.h  Mag_LSM303DLHC_I2C.c  Mag_LSM303DLHC_I2C.h
embedded/Docs/: README.txt
embedded/Drivers/CMSIS/: ReadMe.txt
embedded/Drivers/CMSIS/LPC5410x-CM4/CMSIS/: I2C_LPC54102x.c
embedded/Drivers/LPC5410x-CM4/CMSIS/: Driver_GPIO.c
embedded/Drivers/Sensor/Bosch-Sensortec/: Driver_BMA2X2.c  Driver_BMG160.c  Driver_BMM050.c
embedded/Projects/OSP-STEVAL-MKI109V2/Keil-MDK-Build/: OSP-STEVAL.uvopt  OSP-STEVAL.uvproj
embedded/Projects/OSP-STEVAL-MKI109V2/Sources/App/: AppVersion.h  App_Tasks.h  Console_Util.c  DebugPrint.h  I2C_SlaveComm_T.c  Main.c  Main.h  (+3 more)
embedded/Projects/step-example/: CMakeLists.txt  example_platform_interface.h  main.c  simulated_platform.c
embedded/common/alg/: osp-alg-types.h  osp_embeddedalgcalls.c  osp_embeddedalgcalls.h  signalgenerator.c  signalgenerator.h  significantmotiondetector.c  significantmotiondetector.h  stepdetector.c  stepdetector.h  stepsegmenter.c  stepsegmenter.h  stepsignalgenerator.c
embedded/common/app/: algorithm_t.c  app_msgdef.h  appmsgstruct.h  cmdhandler_t.c  common.h  debugprint.c  hw_setup.h  instrmgr_t.c  instrmgr_user.c  osp-api.c  sensoracq_t.c
embedded/common/asf/: asf_messages.c  asf_msgdef.h  asf_msgstruct.h  asf_taskdeftype.h  asf_taskinit.c  asf_tasks.h  asf_taskstruct.h  asf_timers.c  asf_tqenum.h  asf_types.h
embedded/common/hostinterface/: BatchManager.c  BatchManager.h  BatchState.c  BatchState.h  BlockMemory.c  BlockMemory.h  ConfigManager.c  ConfigManager.h  Queue.c  Queue.h  SensorPackets.c  SensorPackets.h  SensorPackets_Common.c  SensorPackets_Format.c  SensorPackets_Internal.h  SensorPackets_Parse.c
embedded/common/modules/bus-drivers/: i2c_driver.h  i2cs_driver.h
embedded/common/modules/sensor-drivers/: Bosch_I2C_Adapter.c  Bosch_I2C_Adapter.h  Driver_Sensor.h  acc_bmc150_i2c.c  acc_bmc150_i2c.h  acc_common.h  acc_lsm303dlhc_i2c.c  gyro_bmg160_i2c.c  gyro_bmg160_i2c.h  gyro_common.h  gyro_l3gd20_i2c.c  mag_bmc150_i2c.c  mag_bmc150_i2c.h  mag_common.h  mag_lsm303dlhc_i2c.c
embedded/common/templates/: __SourceFile.c  __SourceFile.h
embedded/include/: Driver_Sensor.h
embedded/projects/Nucleo_F091_Hello/Keil-MDK-Build/: Nucleo_F091_Hello.uvoptx  Nucleo_F091_Hello.uvprojx
embedded/projects/PurpleHaze_Hello/Keil-MDK-Build/: PurpleHaze_Hello.uvoptx  PurpleHaze_Hello.uvprojx
embedded/projects/SH-Xpresso-LPC54102/keil-mdk-build/: Jenkins_Build.bat  SH-Xpresso-LPC54102.uvoptx  SH-Xpresso-LPC54102.uvprojx  preBuildCmd.bat
embedded/projects/osp-steval-mki109v2/keil-mdk-build/: osp-steval.uvopt  osp-steval.uvoptx  osp-steval.uvproj  osp-steval.uvprojx
embedded/projects/step-example/: CMakeLists.txt  example_platform_interface.h  simulated_platform.c
include/: osp-api.h  osp-fixedpoint-types.h  osp-sensors.h  osp-types.h  osp-version.h
linux/sensorhubd/: CMakeLists.txt  DebugLog.h  FM_DataTypes.h  FixedPointTypes.h  FmConfiguration.cpp  FmConfiguration.h  FreeMotion_RemoteProcedureCalls.h  FreeMotion_RemoteProcedureCalls_Relay.cpp  FreeMotion_RemoteProcedureCalls_SerialUart.cpp  FreeMotion_RemoteProcedureCalls_stub.cpp  Names.h  README.md  RelayInterface.h  UinputUtils.c  UinputUtils.h  VirtualSensorDeviceManager.cpp  VirtualSensorDeviceManager.h  main.cpp  osp_configuration.cpp  osp_datatypes.h  osp_debuglogging.h  osp_names.h  osp_relayinterface.h  osp_remoteprocedurecalls.h  osp_remoteprocedurecalls_relay.cpp  osp_remoteprocedurecalls_stub.cpp  ospconfiguration.cpp  ospconfiguration.h  sensor_relay.h  uinput.h  virtualsensordevicemanager.cpp  virtualsensordevicemanager.h
scripts/: generateVersionDotH.py
(+78 files in other folders)
